just fix PlantCvsLoader